--- a/data/authors/default.mdx
+++ b/data/authors/default.mdx
@@ -1,16 +1,12 @@
 ---
-name: Tails Azimuth
-avatar: /static/images/avatar.png
-occupation: Professor of Atmospheric Science
-company: Stanford University
-email: address@yoursite.com
-twitter: https://twitter.com/Twitter
+name: Simon Kurbiel
+avatar: /static/images/photo.png
+occupation: CS at NJIT
+company: popfame
+email: simonkurbiel1@gmail.com
+twitter: https://twitter.com/
 linkedin: https://www.linkedin.com
-github: https://github.com
+github: https://github.com/simon-kurbiel
 ---
 
-Tails Azimuth is a professor of atmospheric sciences at the Stanford AI Lab. His research interests includes complexity modelling of tailwinds, headwinds and crosswinds.
-
-He leads the clean energy group which develops 3D air pollution-climate models, writes differential equation solvers, and manufactures titanium plated air ballons. In his free time he bakes raspberry pi.
-
-Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed neque elit, tristique placerat feugiat ac, facilisis vitae arcu. Proin eget egestas augue. Praesent ut sem nec arcu pellentesque aliquet. Duis dapibus diam vel metus tempus vulputate.
+I am currently a computer science student at NJIT. My interest lies primarily in software engineering. I am proficient in many languages and frameworks, some which include python and Typescript.
