--- a/data/authors/default.mdx
+++ b/data/authors/default.mdx
@@ -9,4 +9,4 @@ linkedin: https://www.linkedin.com
 github: https://github.com/simon-kurbiel
 ---
 
-I am currently a computer science student at NJIT. My interest lies primarily in software engineering. I am proficient in many languages and frameworks, some which include python and Typescript.
+I am currently a computer science student at NJIT. My interest lies primarily in software engineering. I am proficient in many languages and frameworks, some which include python , Typescript, C.
