narrowing in ts blog

--- a/data/authors/default.mdx
+++ b/data/authors/default.mdx
@@ -4,7 +4,7 @@ avatar: /static/images/photo.png
 occupation: CS at NJIT
 company: popfame
 email: simonkurbiel1@gmail.com
-twitter: https://twitter.com/
+twitter: https://twitter.com/Simba_NULL
 linkedin: https://www.linkedin.com
 github: https://github.com/simon-kurbiel
 ---
