set up projects

--- a/data/authors/default.mdx
+++ b/data/authors/default.mdx
@@ -2,11 +2,23 @@
 name: Simon Kurbiel
 avatar: /static/images/photo.png
 occupation: CS at NJIT
-company: popfame
-email: simonkurbiel1@gmail.com
+email: simonkurbiel7@gmail.com
 twitter: https://twitter.com/Simba_NULL
-linkedin: https://www.linkedin.com
 github: https://github.com/simon-kurbiel
 ---
 
-I am currently a computer science student at NJIT. My interest lies primarily in software engineering. I am proficient in many languages and frameworks, some which include python , Typescript, C.
+## Introduction
+
+Hello! My name is simon kurbiel and i am currently a computer science student at NJIT. My interest lies primarily in software engineering, machine learning and operating systems.
+
+## Skills
+
+- Python, go, C
+- Aws, Docker, Kubernetes
+- SQL variants, mongoDB
+
+## Hobbies
+
+- Playing sports
+- Reading history books
+- Tinkering with code
