added merge sort

--- a/data/blog/data-structures/analysis-of-alogirthms.mdx
+++ b/data/blog/data-structures/analysis-of-alogirthms.mdx
@@ -73,7 +73,7 @@ in this case, the worst case scenario is very simple to spot. The for loop will 
 
 When we study the running time of algorithms, our focus is on the perfomance when the size gets very large, because for smaller numbers, the running time will be very small anyways.
 
-Suppose there two algorithms with for a problem of size n, with these running tmes:
+Suppose there are two algorithms for a problem of size n, with these running tmes:
 
 $$
 T_1(n) = 10n \\
@@ -154,7 +154,7 @@ $$
 
 Ω$()$ Lower bound is symmetrical to $O()$
 
-Suppose there are positibve constants $C$ and $n_o$ such that <br/>
+Suppose there are positive constants $C$ and $n_o$ such that <br/>
 
 $$
 T(n) ≥ C ⋅ f(n), ∀n ≥ n_o \\
