--- a/data/blog/data-structures/mathematical-induction.mdx
+++ b/data/blog/data-structures/mathematical-induction.mdx
@@ -106,7 +106,7 @@ We want to **prove** the following program computes and returns $\log_2n$,
 assuming that the input parameter $n$ is an integer power of 2.
 
 Let $p_k$ and $m_k$ denote the resulting values of the variables $p$ and $k$ after iteration k of the
-while look, where $k = 0, 1, 2,...$. Here, $k = 0$ represents the values after the initialization
+while loop, where $k = 0, 1, 2,...$. Here, $k = 0$ represents the values after the initialization
 and just before the first execution of the while loop; $k = 1$ represents the values after
 the first execution of the while loop, and so on.
 
