--- a/data/blog/data-structures/recursive-algos.mdx
+++ b/data/blog/data-structures/recursive-algos.mdx
@@ -269,3 +269,4 @@ $$
 ## More algorithms
 
 1. [Binary Search Algorithm](/blog/data-structures/binary-search)
+2. [Merge Sort Algorithm](/blog/data-structures/merge-sort)
